tests/snapshots/regression/recovery__double_comma_in_call_then_continue.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/double_comma_in_call_then_continue.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 1 error • tests/fixtures/recovery/double_comma_in_call_then_continue.flx
error[E034]: Unexpected Token

Expected expression after `,`, got `,`.

  tests/fixtures/recovery/double_comma_in_call_then_continue.flx:1:6
  |
1 | f(1, , 2);
  |      ^
